# my-helper

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
examples/: dump_text.rs
packaging/: run.bat  run.command
rfc/: invoice-printer-plan.md
scripts/: fetch-pdfium.sh
src/: chinese_yuan.rs  cli.rs  composer.rs  extractor.rs  invoice.rs  main.rs  report.rs  scanner.rs  utils.rs
